fix: add white-space pre-wrap

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -139,3 +139,8 @@
     padding-left: 5px * $value !important;
   }
 }
+
+// テキストエリア入力欄の改行用スタイル
+.u-white-spcace-pre-wrap {
+  white-space: pre-wrap;
+}
